# serde_cadence

./: Cargo.toml
cadence_json_derive/: Cargo.toml
cadence_json_derive/src/: lib.rs
examples/: address_map.rs  dictionary.rs  macros.rs  manual.rs
src/: conversion.rs  impls.rs  lib.rs
