[package]
name = "serde_cadence"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
cadence_json_derive = { version = "0.1.0", path = "./cadence_json_derive", optional = true }


[features]
default = ["derive"]
derive = ["cadence_json_derive"]

[workspace]
members = [
    "cadence_json_derive"
]