[package]
name = "cadence_json_derive"
version = "0.1.0"
edition = "2024"
authors = ["Demchuk Nazar <nazar.demchvk@gmail.com>"]
repository = "https://github.com/uandere/serde_cadence"
description = "Derive macros for serde_cadence."
license = "MIT OR Apache-2.0"

[dependencies]
syn = "2.0.96"
quote = "1.0.38"
proc-macro2 = "1.0.93"

[lib]
proc-macro = true